avoid overlap of dataset title and language selector

--- a/src/plugins/data/public/ui/dataset_selector/_dataset_selector.scss
+++ b/src/plugins/data/public/ui/dataset_selector/_dataset_selector.scss
@@ -3,6 +3,10 @@
     margin-right: 4px;
   }
 
+  &__popover {
+    overflow: hidden;
+  }
+
   &__advancedButton {
     width: 100%;
   }
